feat(home page)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,10 +6,8 @@
     <div>
       <h1 class="title">{{ title }}</h1>
       <div class="links">
-        <a href="#" class="giant-button"> San Francisco, USA </a>
-        <a href="#" class="giant-button"> Québec, Canada </a>
-        <a href="#" class="giant-button"> Bora Bora, Polynésie </a>
-        <a href="#" class="giant-button"> Torres del Paine, Chile </a>
+        <a href="#" class="giant-button" *ngFor="let destination of destinations; let i = index"
+                        {{ destination.name }}></a>
       </div>
     </div>
   </div>
